--- a/37-flexibbble/package.json
+++ b/37-flexibbble/package.json
@@ -1,13 +1,4 @@
 {
-  "name": "37-flexibbble",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
     "@grafbase/sdk": "^0.14.0",
     "@headlessui/react": "^1.7.18",
@@ -22,11 +13,21 @@
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
+    "@grafbase/sdk": "~0.14.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "typescript": "^5"
-  }
+  },
+  "name": "37-flexibbble",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start"
+  },
+  "version": "0.1.0"
 }
